# pyfile_summariser

./: README.md  pyproject.toml
pyfile_summariser/: cli.py
